add more typing and a csv to compare

--- a/p2_p3.ipynb
+++ b/p2_p3.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,12 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class AdultETL:\n",
-    "    def __init__(self):\n",
+    "    def __init__(self) -> None:\n",
     "        self.initial_data_schema = data_types = {\n",
     "            'age': 'int8',\n",
     "            'workclass': 'object',\n",
@@ -129,32 +129,31 @@
     "            \"capital-loss\", \n",
     "            \"hours-per-week\"\n",
     "        ]\n",
-    "        self.save_data_type = \"parquet\"\n",
     "        \n",
     "      \n",
     "    def __call__(self) -> pd.DataFrame:\n",
     "        return self.data\n",
     "    \n",
-    "    def correct_data_types(self):\n",
+    "    def correct_data_types(self) -> None:\n",
     "        for col, dtype in self.initial_data_schema.items():\n",
     "            if col in self.data.columns:\n",
     "                self.data[col] = self.data[col].astype(dtype)\n",
     "\n",
-    "    def create_hashed_id(self):\n",
+    "    def create_hashed_id(self) -> None:\n",
     "        concatenated_values = self.data[self.cols_to_create_hash].apply(lambda row: ''.join(map(str, row)), axis=1)\n",
     "        hashed_values = concatenated_values.apply(lambda x: hashlib.sha256(x.encode()).hexdigest())\n",
     "        self.data['hashed_id'] = hashed_values        \n",
     "    \n",
-    "    def with_profit(self):\n",
+    "    def with_profit(self) -> None:\n",
     "        self.data[\"capital-profit\"] = self.data[\"capital-gain\"] - self.data[\"capital-loss\"]\n",
     "    \n",
-    "    def with_categorized_data(self):\n",
+    "    def with_categorized_data(self) -> None:\n",
     "        string_cols = self.data.select_dtypes(include=[\"category\"]).columns\n",
     "        self.data[string_cols] = self.data[string_cols].apply(lambda x: x.str.strip()).astype(\"category\")\n",
     "        self.data[\"income\"] = self.data[\"income\"].apply(lambda x: 1 if x == \" >50K\" else 0).astype(\"category\")    \n",
     "        self.data[\"capital-profit-gt-0\"] = self.data[\"capital-profit\"].apply(lambda x: 1 if x > 0 else 0).astype(\"category\")\n",
     "    \n",
-    "    def with_kmeans(self, k: int, random_state: int = 42):\n",
+    "    def with_kmeans(self, k: int, random_state: int = 42) -> None:\n",
     "        kmeans = KMeans(n_clusters=k, random_state=random_state)\n",
     "        \n",
     "        input_data_norm = self.data[\n",
@@ -165,12 +164,12 @@
     "        self.data[\"cluster\"] = self.data[\"cluster\"].astype(\"category\")\n",
     "        \n",
     "        \n",
-    "    def extract(self, data_name: str, features_names: List[str]):\n",
+    "    def extract(self, data_name: str, features_names: List[str]) -> None:\n",
     "        self.data: pd.DataFrame = pd.read_csv(data_name, header=None)\n",
     "        self.data.columns = features_names\n",
     "        self.schema = self.data.dtypes\n",
     "    \n",
-    "    def transform(self, k: int):\n",
+    "    def transform(self, k: int) -> None:\n",
     "        self.correct_data_types()\n",
     "        self.create_hashed_id()\n",
     "        self.with_profit()\n",
@@ -178,10 +177,10 @@
     "        self.with_kmeans(k)\n",
     "        self.schema = self.data.dtypes\n",
     "    \n",
-    "    def load(self, new_data_name: str):\n",
-    "        if self.save_data_type == \"parquet\":\n",
+    "    def load(self, new_data_name: str, save_data_type = \"parquet\") -> None:\n",
+    "        if save_data_type == \"parquet\":\n",
     "            self.data.to_parquet(new_data_name, index=False)\n",
-    "        elif self.save_data_type == \"csv\":\n",
+    "        elif save_data_type == \"csv\":\n",
     "            self.data.to_csv(new_data_name, index=False)\n",
     "        else:\n",
     "            raise ValueError(\"Invalid save_data_type\")\n",
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +366,7 @@
        "4             0             0              40            Cuba   <=50K  "
       ]
      },
-     "execution_count": 119,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +401,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +618,7 @@
        "4                   0       1  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +638,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "etl.load(\"data/adult.data.processed.csv\", save_data_type=\"csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +675,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
